syntax = "proto3";

option java_package = "com.java.spring.grpc";
option java_multiple_files = true;

package com.java.spring.grpc;

service ProductService {
  rpc Save(ProductReq) returns (ProductRes);
  rpc FindById(ProductReq) returns (ProductRes);
  rpc FindAll(ProductReq) returns (ProductRes);
  rpc Delete(ProductReq) returns (ProductRes);
}

message ProductReq {
  string name = 1;
  double price = 2;
  int32 quantity = 3;
}

message ProductRes {
  float id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}
